--- a/sgSrc/sg.scss
+++ b/sgSrc/sg.scss
@@ -36,6 +36,7 @@
 $_spacers: u-m u-mt u-me u-mb u-ms u-mh u-mv u-mr u-ml u-p u-pt u-pe u-pb u-ps u-ph u-pv u-pr u-pl;
 
 @each $name in $_spacers {
+  @include jigsass-util($name, $modifier: 'auto');
   @for $i from 1 through 4 {
     @include jigsass-util($name, $modifier: $i);
   }
